# Challenge-WebApp

./: .pre-commit-config.yaml  README.md  pyproject.toml  run.sh
src/: main.py
src/assets/js/: main.js
src/core/: config.py
src/templates/: base.html  dashboard.html  expenses.html  expenses_create.html  payments.html
src/utils/: api_client.py  filters.py  mappers.py
src/views/: dashboard.py  expenses.py  payments.py
